[gd_scene load_steps=10 format=1]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/bgfruitninja.jpg" type="Texture" id=2]
[ext_resource path="res://Scripts/Inputproc.gd" type="Script" id=3]
[ext_resource path="res://Sounds/slice2.ogg" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Explosion.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/hud_vidas.png" type="Texture" id=6]
[ext_resource path="res://assets/font150.fnt" type="BitmapFont" id=7]
[ext_resource path="res://assets/bomb100.png" type="Texture" id=8]

[sub_resource type="GDScript" id=1]

script/source = "extends Control

var pode = false


func _ready():
	set_process_input(true)

func _input(event):
	if event.type == InputEvent.SCREEN_TOUCH and pode:
		get_tree().reload_current_scene()
		
	
func start():
	show()
	get_node(\"Label\").show()
	get_node(\"Timer\").start()
	


func _on_Timer_timeout():
	pode =true
	get_node(\"Label 2\").show()
"

[node name="Game" type="Node2D"]

transform/pos = Vector2( 0, 4.54413 )
script/script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]

transform/pos = Vector2( 2.76196, -5.44837 )
transform/scale = Vector2( 0.809272, 0.613048 )
texture = ExtResource( 2 )
centered = false

[node name="Fruits" type="Node2D" parent="."]

[node name="Generator" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[node name="InputProc" type="Node2D" parent="."]

script/script = ExtResource( 3 )

[node name="Inter" type="Timer" parent="InputProc"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="Limit" type="Timer" parent="InputProc"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="SoundSlice" type="StreamPlayer" parent="InputProc"]

stream/stream = ExtResource( 4 )
stream/play = true
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="SoundBomb" type="StreamPlayer" parent="InputProc"]

stream/stream = ExtResource( 5 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Control" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="TextureFrame" type="TextureFrame" parent="Control"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 57.0
margin/top = 35.0
margin/right = 348.0
margin/bottom = 351.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="Label" type="Label" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 241.0
margin/top = 66.0
margin/right = 330.0
margin/bottom = 235.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.117647, 0.54902, 0.117647, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Bomb1" type="TextureFrame" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 970.0
margin/top = 13.0
margin/right = 1070.0
margin/bottom = 113.0
texture = ExtResource( 8 )
stretch_mode = 0

[node name="Bomb2" type="TextureFrame" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1061.0
margin/top = 13.0
margin/right = 1161.0
margin/bottom = 113.0
texture = ExtResource( 8 )
stretch_mode = 0

[node name="Bomb3" type="TextureFrame" parent="Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1157.0
margin/top = 13.0
margin/right = 1257.0
margin/bottom = 113.0
texture = ExtResource( 8 )
stretch_mode = 0

[node name="GameOverScreen" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = SubResource( 1 )

[node name="Timer" type="Timer" parent="GameOverScreen"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Label" type="Label" parent="GameOverScreen"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 261.0
margin/top = 275.0
margin/right = 1032.0
margin/bottom = 426.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.660156, 0.105728, 0.105728, 1 )
custom_colors/font_color_shadow = Color( 0.9375, 0.878906, 0.878906, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 0
text = "GAME OVER!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="GameOverScreen"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 261.0
margin/top = 275.0
margin/right = 1032.0
margin/bottom = 426.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.660156, 0.105728, 0.105728, 1 )
custom_colors/font_color_shadow = Color( 0.9375, 0.878906, 0.878906, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 0
text = "GAME OVER!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label 2" type="Label" parent="GameOverScreen"]

visibility/visible = false
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 150.0
margin/top = 429.0
margin/right = 2222.0
margin/bottom = 574.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.117647, 0.54902, 0.117647, 1 )
text = "Toque para jogar novamente"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="timeout" from="Generator" to="." method="_on_Generator_timeout"]

[connection signal="timeout" from="InputProc/Inter" to="InputProc" method="_on_Inter_timeout"]

[connection signal="timeout" from="GameOverScreen/Timer" to="GameOverScreen" method="_on_Timer_timeout"]


